# CellularTest

./: README.md
source/: App.cpp  App.h  CMakeLists.txt  Cell.cpp  Cell.h  CellularAutomaton.cpp  CellularAutomaton.h  main.cpp
source/GameOfLife/: GameOfLife.cpp  GameOfLife.h
source/Util/: Config.h
source/WildFire/: Dirt.cpp  Dirt.h  Tree.cpp  Tree.h  WildFire.cpp  WildFire.h
